# studious-downfall

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RESULTS.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  paper-drift.yml  performance.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  papers.yml
docs/: FRAMING_AUDIT.md  FRAMING_PIVOT_TASKS.md  IMPLEMENTATION_PLAN.md  emergent_systems.bib  emergent_systems.tex  proof_techniques.md  vitality_computation.md
docs/papers/: README.md
docs/papers/_template/: README.md  paper.tex  references.bib
docs/papers/c1_closure_unification/: README.md  paper.tex  references.bib
docs/papers/c2_hierarchical_viability/: README.md  paper.tex  references.bib
docs/papers/c3_observer_divergence/: README.md  paper.tex  references.bib
docs/papers/cat1_characterisation/: README.md  paper.tex
docs/papers/le_level_emergence/: README.md  (+2 more)
docs/textbook/: README.md  book.tex  ch01-what-is-artificial-life.tex  ch02-what-is-life.tex  ch03-emergence-and-novelty.tex  ch04-five-slot-lens.tex  ch05-substrate-and-variation.tex  ch06-viability.tex  ch07-topology-and-observers.tex  ch08-composition-and-measurement.tex  ch09-frontiers.tex  math-primer.tex  preface.tex
scripts/: README.md  check-latex-log.sh  post-pr-review.sh
src/emergent_systems/: __init__.py  _types.py  distribution.py  emergence.py  entity.py  observer.py  perf.py  population.py  spec.py  substrate.py  system.py  topology.py  variation.py  viability.py  visualization.py
tests/: conftest.py  test_conformance.py  test_coverage_gaps.py  test_distribution.py  test_emergence.py  test_pipeline.py  test_population.py  test_substrate_compose.py  test_system_spec.py  test_typing.py  test_variation_compose.py  test_visualization.py
(+29 files in other folders)
